fix logo size on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -676,7 +676,7 @@ footer {
     font-size: 1.75em
   }
   #lead-content img {
-    max-width:25%;
+    max-width:50%;
   }
   #about {
     text-align: center
